# Zap-Imoveis-Web-Scraping

./: Makefile  README.md  hello.py  pyproject.toml
.github/workflows/: zap_imoveis_joinville.yml
Notebooks/: analise_imoveis_joinville.ipynb  playright.py  resultado.json  testando_classes.py  web_scrapen_zip_imoveis_playwright.ipynb  web_scrapen_zip_imoveis_selenium.ipynb  web_scraping.py  web_scraping_playwright-stealth.py
Notebooks/storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __CRAWLER_STATISTICS_0.__metadata__.json  __CRAWLER_STATISTICS_1  __CRAWLER_STATISTICS_1.__metadata__.json  __CRAWLER_STATISTICS_2  __CRAWLER_STATISTICS_2.__metadata__.json  __RQ_STATE_JXPyoijGt4bqSu5sv  __RQ_STATE_JXPyoijGt4bqSu5sv.__metadata__.json  __metadata__.json
Notebooks/storage/request_queues/default/: __metadata__.json  dc550b5bd71b6e4.json
codigos_rodando/: coletando_dados_zap_imoveis.py
preco_imoveis.egg-info/: PKG-INFO  requires.txt  top_level.txt
src/: __init__.py
src/preco_imoveis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scraping_zap_imoveis/: __init__.py  extrair_dados_zap_imoveis_playwright.py  extrair_dados_zap_imoveis_playwright_async.py  link_anuncios_zap_imoveis.py  link_anuncios_zap_imoveis_playwright.py  link_anuncios_zap_imoveis_playwright_async.py  total_pagina_zap_imovel_playwirght.py  total_pagina_zap_imovel_playwright.py  total_pagina_zap_imovel_playwright_async.py  zap_imoveis_coleta.py
